--- a/less/marketing.less
+++ b/less/marketing.less
@@ -107,7 +107,7 @@
 
             @media @mobile {
 
-                padding-left: 5rem;
+                padding-left: 7.5rem;
                 width: 80%;
                 text-align: right;
 
